--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,11 @@
 @tailwind preflight;
 
+
+@tailwind components;
+
 /* Here we can add any custom overrides */
 
 @tailwind utilities;
 
 /* Here we can add our own utilities or custom CSS */
+@tailwind screens;
