--- a/assets/css/single/custom.css
+++ b/assets/css/single/custom.css
@@ -34006,6 +34006,16 @@ table {
   }
 }
 
+html {
+  margin-top: 0 !important;
+  margin-bottom: 0 !important;
+}
+
+.home {
+  margin-top: 0 !important;
+  margin-bottom: 0 !important;
+}
+
 a {
   text-decoration: none;
 }
