--- a/resources/stylus/custom.styl
+++ b/resources/stylus/custom.styl
@@ -10,6 +10,14 @@
 /* Here we can add our own utilities or custom CSS */
 @tailwind screens;
 
+html
+  margin-top: 0 !important
+  margin-bottom: 0 !important 
+
+.home
+  margin-top: 0 !important
+  margin-bottom: 0 !important 
+
 a
   text-decoration: none;
 
