--- a/resources/stylus/custom.styl
+++ b/resources/stylus/custom.styl
@@ -25,6 +25,14 @@ body
   li
     list-style: none
 
+#primary
+  width: 50%
+  margin: 0 auto
+
+  #main
+    width: 100%
+    margin: 0 auto
+
 // NAVIGATION
   nav
     #menu-header  
@@ -70,3 +78,9 @@ body
 .post-categories
   margin: 0 0
   padding: 0 0
+
+// Navigation Home Pagination
+.page-numbers
+  display: flex
+  justify-content: center;
+  margin: 0 20px
