--- a/assets/css/single/custom.css
+++ b/assets/css/single/custom.css
@@ -34094,3 +34094,9 @@ nav #menu-header li a:hover {
   justify-content: center;
   margin: 0 20px;
 }
+
+.min-height {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+}
