--- a/assets/css/single/custom.css
+++ b/assets/css/single/custom.css
@@ -34095,7 +34095,7 @@ nav #menu-header li a:hover {
   margin: 0 20px;
 }
 
-.min-height {
+.footer-search {
   position: absolute;
   bottom: 0;
   width: 100%;
